# ownership-intelligence-platform

./: .env.example  .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
data/: accounts.csv  employment.csv  entities.csv  guarantees.csv  legal_reps.csv  locations.csv  news.csv  ownerships.csv  person_account_opening.csv  persons.csv  relationships.csv  supply_chain.csv  transactions.csv
docs/: add graphrag.md  agent.md  black_industry_kb_display_plan.md  black_industry_kb_mvp_plan.md  black_industry_knowledge_base.en.md  llm.md  mvp_build_plan.en.md  name scanning.md  person_data_schema.md  requirements_analysis_doubao.en.md  structure.md  客户尽调.md  开户信息.md  智网.drawio  测试数据.md  需求分析-豆包.md  需求分析2.md  黑产知识库.md
reports/: C1.html  C1.md  ENT_HTML.html  ENT_HTML.md  TEST_ENT.md
static/: admin.page.js  app.js  data_console.html  index.html  name_scan.html  output.css  person_network.html
tests/: conftest.py  test_chat_api.py  test_chat_web.py  test_crawler_cn_html.py  test_crawler_rss.py  test_crawler_sse_top10.py  test_entity_resolve.py  test_external_lookup.py  test_import.py  test_import_person_opening.py  test_import_persons_extended.py  test_kb_risk_scoring.py  test_kb_rules_loading.py  test_models.py  test_name_screening.py  test_news_import.py  test_news_service.py  test_penetration_paths.py  test_person_account_opening.py  test_person_extended_fetch.py  test_person_network.py  test_person_relationships.py  test_person_suggest.py  test_person_suggest_enriched.py  test_persons_import_api.py  (+4 more)
(+141 files in other folders)
